# GamePI

./: .gitignore  Consept.drawio  License  README.md  install.sh
Docs/: Class_SFMLBoost.md  Desktop_communication.drawio  Scene_Interface.md  Sences.drawio  Senses.drawio  System Flowchart.drawio  System_Flowchart.drawio  Themes.md  readme.md
Docs/Core/: AssetsCacheManager.md  Assets_Cache_Manager_v1.drawio  Class_ConfigLoader.md  Class_Scene.md
assets/: 04B_30__.TTF:Zone.Identifier  Game boy cartridge.aseprite  GamePI SplashScreen Icon.aseprite  Theme.json
src/: CMakeLists.txt  Demo_main.cpp  MacroFlags.hpp.in  SystemDefines.hpp  build.sh  main.cpp
src/Core/: AssetsCache.cpp  AssetsCache.hpp  AssetsCacheManager.cpp  AssetsCacheManager.hpp  ConfigLoader.cpp  ConfigLoader.hpp
src/Core/Scenes/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/Scenes/: GameShowCase.cpp  GameShowCase.hpp  MainMenu.cpp  MainMenu.hpp  SplashScreen.cpp  SplashScreen.hpp
src/libs/: BoostSFML.cpp  BoostSFML.hpp  SFMLBoost.hpp
src/libs/Retsa/: ticker.md
src/libs/SFMLBoost/: BoostSFML.cpp  BoostSFML.hpp  ObjectsGroup.cpp  ObjectsGroup.hpp
src/libs/Ticker_Interval/: ticker.hpp
src/libs/cpp-colors/: colors.hpp
